Fix headings too small

--- a/src/themes/hugo-theme-learn/_src/sass/_theme.scss
+++ b/src/themes/hugo-theme-learn/_src/sass/_theme.scss
@@ -1421,13 +1421,13 @@ h4 {
 }
 
 h5 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 110% !important;
   margin: 1rem 0 0.2rem 0;
 }
 
 h6 {
-  font-size: 0.5rem;
+  font-size: 1rem;
   line-height: 110% !important;
   margin: 0.5rem 0 0.2rem 0;
 }
